ES XML assets from LSO

--- a/l10n/ses/es-es/xml/admin_about.xml
+++ b/l10n/ses/es-es/xml/admin_about.xml
@@ -33,7 +33,7 @@
     <term>Hardware básico</term>
     <listitem>
      <para>
-      Para ejecutar un clúster de Ceph no se requiere ningún hardware especial. Para obtener información, consulte <xref linkend="storage-bp-hwreq"/>
+      Para ejecutar un clúster de Ceph no se requiere ningún hardware especial. Para obtener información, consulte el <xref linkend="storage-bp-hwreq"/>
      </para>
     </listitem>
    </varlistentry>
