--- a/l10n/ses/es-es/xml/admin_ceph_cephfs.xml
+++ b/l10n/ses/es-es/xml/admin_ceph_cephfs.xml
@@ -8,7 +8,7 @@
   </dm:docmanager>
  </info>
  <para>
-  En este capítulo se describen las tareas de administración que normalmente se llevan a cabo después de configurar el clúster y exportar CephFS. Si necesita más información sobre cómo configurar CephFS, consulte <xref linkend="deploy-cephadm-day2-service-mds"/>.
+  En este capítulo se describen las tareas de administración que normalmente se llevan a cabo después de configurar el clúster y exportar CephFS. Si necesita más información sobre cómo configurar CephFS, consulte el <xref linkend="deploy-cephadm-day2-service-mds"/>.
  </para>
  <sect1 xml:id="ceph-cephfs-cephfs-mount">
   <title>Montaje de CephFS</title>
