--- a/l10n/ses/es-es/xml/admin_ceph_datamgm.xml
+++ b/l10n/ses/es-es/xml/admin_ceph_datamgm.xml
@@ -1359,7 +1359,7 @@ row=foo rack=bar host=foo-bar-1</screen>
     </para>
 <screen><prompt>cephuser@adm &gt; </prompt>ceph osd reweight <replaceable>OSD_NAME</replaceable> <replaceable>NEW_WEIGHT</replaceable></screen>
     <para>
-     <command>Ceph osd reweight</command> define un peso de sustitución en el Ceph OSD. Este valor está en el intervalo entre 0 y 1 e impone a CRUSH que recoloque los datos que de otro modo estarían en esta unidad. <emphasis role="bold">No</emphasis> cambia los pesos asignados a los depósitos situados por encima del OSD. Se trata de una medida correctiva en caso de que la distribución normal de CRUSH no funcione del todo bien. Por ejemplo, si uno de los OSD está al 90 % y los demás están al 40 %, podría reducir este peso para tratar de compensarlos.
+     <command>ceph osd reweight</command> define un peso de sustitución en el Ceph OSD. Este valor está en el intervalo entre 0 y 1 e impone a CRUSH que recoloque los datos que de otro modo estarían en esta unidad. <emphasis role="bold">No</emphasis> cambia los pesos asignados a los depósitos situados por encima del OSD. Se trata de una medida correctiva en caso de que la distribución normal de CRUSH no funcione del todo bien. Por ejemplo, si uno de los OSD está al 90 % y los demás están al 40 %, podría reducir este peso para tratar de compensarlos.
     </para>
     <note>
      <title>el peso del OSD es temporal</title>
