--- a/l10n/ses/es-es/xml/admin_ceph_upgrade.xml
+++ b/l10n/ses/es-es/xml/admin_ceph_upgrade.xml
@@ -99,7 +99,7 @@
     </listitem>
     <listitem>
      <para>
-      Lea el <xref linkend="ses-deployment"/> para familiarizarse con <systemitem class="resource">ceph-salt</systemitem> y Ceph Orchestrator y, en particular, con la información sobre las especificaciones de servicio.
+      Lea la <xref linkend="ses-deployment"/> para familiarizarse con <systemitem class="resource">ceph-salt</systemitem> y Ceph Orchestrator y, en particular, con la información sobre las especificaciones de servicio.
      </para>
     </listitem>
     <listitem>
@@ -142,7 +142,7 @@
   <sect2 xml:id="upgrade-backup-config-data">
    <title>Copia de seguridad de la configuración y los datos del clúster</title>
    <para>
-    Se recomienda encarecidamente realizar una copia de seguridad de toda la configuración y los datos del clúster antes de iniciar la actualización a SUSE Enterprise Storage 7.1. Para obtener más información sobre cómo realizar copias de seguridad de todos los datos, consulte <link xlink:href="https://documentation.suse.com/ses/6/single-html/ses-admin/#cha-deployment-backup"/>.
+    Se recomienda encarecidamente realizar una copia de seguridad de toda la configuración y los datos del clúster antes de iniciar la actualización a SUSE Enterprise Storage 7.1. Para obtener más información sobre cómo realizar copias de seguridad de todos los datos, consulte el <link xlink:href="https://documentation.suse.com/ses/6/single-html/ses-admin/#cha-deployment-backup"/>.
    </para>
   </sect2>
 
@@ -647,7 +647,7 @@ ID   CLASS  WEIGHT   TYPE NAME       STATUS  REWEIGHT  PRI-AFF
  adopt --style=legacy --name grafana.$(hostname)
 </screen>
      <para>
-      Las imágenes de contenedor necesarias y sus respectivas versiones se muestran en <xref linkend="monitoring-custom-images"/>.
+      Las imágenes de contenedor necesarias y sus respectivas versiones se muestran en el <xref linkend="monitoring-custom-images"/>.
      </para>
     </tip>
    </step>
@@ -678,7 +678,7 @@ ID   CLASS  WEIGHT   TYPE NAME       STATUS  REWEIGHT  PRI-AFF
       Si no lo hace, las nuevas distribuciones de servicios de supervisión y las redistribuciones utilizarán la configuración por defecto de cephadm y es posible que no pueda distribuir los servicios (en el caso de distribuciones con espacios abiertos), o que acabe con servicios distribuidos con versiones mixtas.
      </para>
      <para>
-      La forma en que se debe configurar cephadm para utilizar imágenes de contenedor del registro local se describe en <xref linkend="monitoring-custom-images"/>.
+      La forma en que se debe configurar cephadm para utilizar imágenes de contenedor del registro local se describe en el <xref linkend="monitoring-custom-images"/>.
      </para>
     </tip>
    </step>
