--- a/l10n/ses/es-es/xml/admin_ds_backup.xml
+++ b/l10n/ses/es-es/xml/admin_ds_backup.xml
@@ -16,7 +16,7 @@
   <sect2 xml:id="backrest-ceph-cephsalt">
    <title>Copia de seguridad de la configuración de <systemitem class="resource">ceph-salt</systemitem></title>
    <para>
-    Exporte la configuración del clúster. Encontrará más información en <xref linkend="deploy-cephadm-configure-export"/>.
+    Exporte la configuración del clúster. Encontrará más información en el <xref linkend="deploy-cephadm-configure-export"/>.
    </para>
   </sect2>
 
@@ -103,12 +103,12 @@
   <orderedlist>
    <listitem>
     <para>
-     Vuelva a instalar el nodo. Encontrará más información en <xref linkend="deploy-sles"/>
+     Vuelva a instalar el nodo. Encontrará más información en el <xref linkend="deploy-sles"/>
     </para>
    </listitem>
    <listitem>
     <para>
-     Instale Salt. Encontrará más información en <xref linkend="deploy-salt"/>
+     Instale Salt. Encontrará más información en el <xref linkend="deploy-salt"/>
     </para>
    </listitem>
    <listitem>
