--- a/l10n/ses/es-es/xml/admin_monitoring_alerting.xml
+++ b/l10n/ses/es-es/xml/admin_monitoring_alerting.xml
@@ -381,7 +381,7 @@
 
   <note>
    <para>
-    Para obtener más información sobre los archivos de servicio y colocación, consulte <xref linkend="cephadm-service-and-placement-specs"/>.
+    Para obtener más información sobre los archivos de servicio y colocación, consulte el <xref linkend="cephadm-service-and-placement-specs"/>.
    </para>
   </note>
 
