--- a/l10n/ses/es-es/xml/admin_nfsganesha.xml
+++ b/l10n/ses/es-es/xml/admin_nfsganesha.xml
@@ -9,7 +9,7 @@
   </dm:docmanager>
  </info>
  <para>
-  NFS Ganesha es un servidor NFS que se ejecuta en un espacio de dirección de usuario, en lugar de hacerlo como parte del kernel del sistema operativo. Con NFS Ganesha, puede poner en marcha su propio mecanismo de almacenamiento, como Ceph, y acceder a él desde cualquier cliente NFS. Para obtener instrucciones sobre la instalación, consulte <xref linkend="deploy-cephadm-day2-service-nfs"/>.
+  NFS Ganesha es un servidor NFS que se ejecuta en un espacio de dirección de usuario, en lugar de hacerlo como parte del kernel del sistema operativo. Con NFS Ganesha, puede poner en marcha su propio mecanismo de almacenamiento, como Ceph, y acceder a él desde cualquier cliente NFS. Para obtener instrucciones sobre la instalación, consulte el <xref linkend="deploy-cephadm-day2-service-nfs"/>.
  </para>
  <note>
   <title>rendimiento de NFS Ganesha</title>
@@ -75,7 +75,7 @@
 
   <important>
    <para>
-    Cuando el servicio de NFS Ganesha se inicia, no se exporta automáticamente un sistema de archivos CephFS. Para exportar un sistema de archivos CephFS, cree un archivo de configuración de exportación. Consulte <xref linkend="ceph-nfsganesha-create-export"/> para obtener más información.
+    Cuando el servicio de NFS Ganesha se inicia, no se exporta automáticamente un sistema de archivos CephFS. Para exportar un sistema de archivos CephFS, cree un archivo de configuración de exportación. Consulte la <xref linkend="ceph-nfsganesha-create-export"/> para obtener más información.
    </para>
   </important>
 
