--- a/l10n/ses/es-es/xml/admin_operating_pools.xml
+++ b/l10n/ses/es-es/xml/admin_operating_pools.xml
@@ -975,7 +975,7 @@ created pool pool1 snap snap1</screen>
   <title>Compresión de datos</title>
 
   <para>
-   BlueStore (encontrará más información en <xref linkend="about-bluestore"/>) proporciona compresión de datos sobre la marcha para ahorrar espacio en disco. La relación de compresión depende de los datos almacenados en el sistema. Tenga en cuenta que la compresión/descompresión requiere potencia de CPU adicional.
+   BlueStore (encontrará más información en el <xref linkend="about-bluestore"/>) proporciona compresión de datos sobre la marcha para ahorrar espacio en disco. La relación de compresión depende de los datos almacenados en el sistema. Tenga en cuenta que la compresión/descompresión requiere potencia de CPU adicional.
   </para>
 
   <para>
