--- a/l10n/ses/es-es/xml/admin_saltcluster.xml
+++ b/l10n/ses/es-es/xml/admin_saltcluster.xml
@@ -113,7 +113,7 @@ ses-min5.example.com   ses-min5.example.com
   <procedure xml:id="removing-node">
    <step>
     <para>
-     Para todos los tipos de servicio de Ceph, excepto <literal>node-exporter</literal> y <literal>crash</literal>, elimine el nombre de host del nodo del archivo de especificación de colocación del clúster (por ejemplo, <filename>cluster.yml</filename>). Consulte <xref linkend="cephadm-service-and-placement-specs"/> para obtener más información. Por ejemplo, si va a eliminar el host denominado <literal>ses-min2</literal>, elimine todas las apariciones de <literal>- ses-min2</literal> de todas las secciones <literal>placement:</literal>.
+     Para todos los tipos de servicio de Ceph, excepto <literal>node-exporter</literal> y <literal>crash</literal>, elimine el nombre de host del nodo del archivo de especificación de colocación del clúster (por ejemplo, <filename>cluster.yml</filename>). Consulte el <xref linkend="cephadm-service-and-placement-specs"/> para obtener más información. Por ejemplo, si va a eliminar el host denominado <literal>ses-min2</literal>, elimine todas las apariciones de <literal>- ses-min2</literal> de todas las secciones <literal>placement:</literal>.
     </para>
     <para>
      Actualice
@@ -1106,7 +1106,7 @@ OSD_ID  HOST         STATE                    PG_COUNT  REPLACE  FORCE  STARTED_
    </tip>
    <note>
     <para>
-     So va a sustituir un OSD después de un fallo, se recomienda encarecidamente activar un borrado profundo de los grupos de colocación. Consulte <xref linkend="scrubbing-pgs"/> para obtener más información.
+     Si va a sustituir un OSD después de un fallo, se recomienda encarecidamente activar un borrado profundo de los grupos de colocación. Consulte la <xref linkend="scrubbing-pgs"/> para obtener más información.
     </para>
     <para>
      Ejecute el siguiente comando para iniciar un borrado profundo:
@@ -1114,7 +1114,7 @@ OSD_ID  HOST         STATE                    PG_COUNT  REPLACE  FORCE  STARTED_
 <screen><prompt>cephuser@adm &gt; </prompt>ceph osd deep-scrub osd.<replaceable>OSD_NUMBER</replaceable></screen>
    </note>
    <important>
-    <title>Fallo del dispositivo compartido</title>
+    <title>fallo del dispositivo compartido</title>
     <para>
      Si falla un dispositivo compartido para DB/WAL, deberá realizar el procedimiento de sustitución para todos los OSD que compartan el dispositivo que ha fallado.
     </para>
