--- a/l10n/ses/es-es/xml/dashboard_about.xml
+++ b/l10n/ses/es-es/xml/dashboard_about.xml
@@ -8,12 +8,12 @@
   </dm:docmanager>
  </info>
  <para>
-  Ceph Dashboard es una aplicación de supervisión y gestión de Ceph basada en Web que administra varios aspectos y objetos del clúster. La consola se habilita automáticamente después de distribuir el clúster básico en <xref linkend="deploy-bootstrap"/>.
+  Ceph Dashboard es una aplicación de supervisión y gestión de Ceph basada en Web que administra varios aspectos y objetos del clúster. La consola se habilita automáticamente después de distribuir el clúster básico en el <xref linkend="deploy-bootstrap"/>.
  </para>
  <para>
   En Ceph Dashboard para SUSE Enterprise Storage 7.1 se han añadido más funciones de gestión basadas en Web para facilitar la administración de Ceph, incluida la supervisión y la administración de aplicaciones en Ceph Manager. Ya no es necesario conocer comandos complejos relacionados con Ceph para gestionar y supervisar el clúster de Ceph. Puede utilizar la intuitiva interfaz de Ceph Dashboard o su API REST integrada.
  </para>
  <para>
-  El módulo Ceph Dashboard muestra información y estadísticas sobre el clúster de Ceph mediante un servidor Web alojado por <literal>ceph-mgr</literal>. Consulte <xref linkend="storage-intro-core-nodes"/> para obtener más información sobre Ceph Manager.
+  El módulo Ceph Dashboard muestra información y estadísticas sobre el clúster de Ceph mediante un servidor Web alojado por <literal>ceph-mgr</literal>. Consulte el <xref linkend="storage-intro-core-nodes"/> para obtener más información sobre Ceph Manager.
  </para>
 </chapter>
