--- a/l10n/ses/es-es/xml/dashboard_manual_config.xml
+++ b/l10n/ses/es-es/xml/dashboard_manual_config.xml
@@ -194,7 +194,7 @@
 
   <note>
    <para>
-    Por defecto, el cortafuegos está habilitado en SUSE Linux Enterprise Server 15 SP3. Para obtener más información acerca de la configuración del cortafuegos, consulte <xref linkend="storage-bp-net-firewall"/>.
+    Por defecto, el cortafuegos está habilitado en SUSE Linux Enterprise Server 15 SP3. Para obtener más información acerca de la configuración del cortafuegos, consulte el <xref linkend="storage-bp-net-firewall"/>.
    </para>
   </note>
 
