--- a/l10n/ses/es-es/xml/dashboard_webui.xml
+++ b/l10n/ses/es-es/xml/dashboard_webui.xml
@@ -48,7 +48,7 @@
 
   <important>
    <para>
-    Tan pronto como haya disponible una actualización a una versión principal nueva de Ceph (nombre en clave: Pacific), Ceph Dashboard mostrará un mensaje al respecto en el área de notificación de arriba. Para llevar a cabo la actualización, siga las instrucciones de <xref linkend="upgrade-to-pacific"/>.
+    Tan pronto como haya disponible una actualización a una versión principal nueva de Ceph (nombre en clave: Pacific), Ceph Dashboard mostrará un mensaje al respecto en el área de notificación de arriba. Para llevar a cabo la actualización, siga las instrucciones del <xref linkend="upgrade-to-pacific"/>.
    </para>
    <figure>
     <title>Notificación sobre una nueva versión de SUSE Enterprise Storage</title>
