--- a/l10n/ses/es-es/xml/deploy_bootstrap.xml
+++ b/l10n/ses/es-es/xml/deploy_bootstrap.xml
@@ -610,7 +610,7 @@ skopeo sync --src docker --dest dir registry.suse.com/ses/7.1/ceph/prometheus-al
      </para>
     </important>
     <tip>
-     <title>Configuración del proxy HTTPS</title>
+     <title>configuración del proxy HTTPS</title>
      <para>
       Si necesita utilizar un servidor proxy para comunicarse con el servidor de registro del contenedor, realice los siguientes pasos de configuración en todos los nodos del clúster:
      </para>
@@ -763,7 +763,7 @@ skopeo sync --src docker --dest dir registry.suse.com/ses/7.1/ceph/prometheus-al
     </para>
    </note>
    <para>
-    Para <emphasis>forzar </emphasis> <literal>el modo seguro</literal>, ejecute los comandos siguientes:
+    Para <emphasis>forzar el modo </emphasis> <literal>secure</literal>, ejecute los comandos siguientes:
    </para>
 <screen><prompt>root@master # </prompt>ceph-salt config /cephadm_bootstrap/ceph_conf/global set ms_cluster_mode secure
 <prompt>root@master # </prompt>ceph-salt config /cephadm_bootstrap/ceph_conf/global set ms_service_mode secure
