--- a/l10n/ses/es-es/xml/deploy_core.xml
+++ b/l10n/ses/es-es/xml/deploy_core.xml
@@ -424,7 +424,7 @@ spec:
    <sect3 xml:id="cephadm-deploy-using-secure-ssl-access">
     <title>Uso del acceso SSL seguro</title>
     <para>
-     Para utilizar una conexión SSL segura con Object Gateway, necesita un par de archivos de clave y certificado SSL válidos (consulte el <xref linkend="ceph-rgw-https"/> para obtener más información). Debe habilitar SSL, especificar un número de puerto para las conexiones SSL y los archivos de certificado SSL y de clave.
+     Para utilizar una conexión SSL segura con Object Gateway, necesita un par de archivos de clave y certificado SSL válidos (consulte el <xref linkend="ceph-rgw-https"/> para obtener más información). Debe habilitar SSL, especificar un número de puerto para las conexiones SSL y especificar los archivos de certificado SSL y de clave.
     </para>
     <para>
      Para habilitar SSL y especificar el número de puerto, incluya lo siguiente en la especificación:
@@ -478,7 +478,7 @@ spec:
      <procedure>
       <step>
        <para>
-        Distribuya Object Gateway proporcionando un archivo de especificación. Consulte <xref linkend="deploy-cephadm-day2-service-ogw"/> para obtener más información sobre la especificación de Object Gateway. Utilice el comando siguiente:
+        Distribuya Object Gateway proporcionando un archivo de especificación. Consulte la <xref linkend="deploy-cephadm-day2-service-ogw"/> para obtener más información sobre la especificación de Object Gateway. Utilice el comando siguiente:
        </para>
 <screen><prompt>cephuser@adm &gt; </prompt>ceph orch apply -i <replaceable>SPEC_FILE</replaceable></screen>
       </step>
@@ -503,7 +503,7 @@ spec:
       
       <step>
        <para>
-        Elimina la configuración específica creada por cephadm. Identifique para qué destino se ha configurado la opción <option>rgw_frontends</option> ejecutando el comando:
+        Elimine la configuración específica creada por cephadm. Identifique para qué destino se ha configurado la opción <option>rgw_frontends</option> ejecutando el comando:
        </para>
 <screen><prompt>cephuser@adm &gt; </prompt>ceph config dump | grep rgw</screen>
        <para>
