--- a/l10n/ses/es-es/xml/deployment_admin_ha.xml
+++ b/l10n/ses/es-es/xml/deployment_admin_ha.xml
@@ -99,7 +99,7 @@
    </step>
    <step>
     <para>
-     En la máquina virtual invitada que acaba de crear, distribuya el nodo de administración, incluidos los servicios adicionales que necesite allí. Siga los pasos relevantes de la <xref linkend="deploy-salt"/>. Al mismo tiempo, distribuya los demás nodos del clúster de Ceph en los servidores del clúster que no sean de alta disponibilidad.
+     En la máquina virtual invitada que acaba de crear, distribuya el nodo de administración, incluidos los servicios adicionales que necesite allí. Siga los pasos relevantes del <xref linkend="deploy-salt"/>. Al mismo tiempo, distribuya los demás nodos del clúster de Ceph en los servidores del clúster que no sean de alta disponibilidad.
     </para>
    </step>
   </procedure>
