--- a/l10n/ses/es-es/xml/manager_modules.xml
+++ b/l10n/ses/es-es/xml/manager_modules.xml
@@ -8,7 +8,7 @@
   </dm:docmanager>
  </info>
  <para>
-  La arquitectura de Ceph Manager (consulte <xref linkend="storage-intro-core-nodes"/> para obtener una breve introducción) permite ampliar su funcionalidad mediante <emphasis>módulos</emphasis>, como la &quot;consola&quot; (consulte la <xref linkend="part-dashboard"/>), &quot;prometheus&quot; (consulte el <xref linkend="monitoring-alerting"/>), o el &quot;equilibrador&quot;.
+  La arquitectura de Ceph Manager (consulte el <xref linkend="storage-intro-core-nodes"/> para obtener una breve introducción) permite ampliar su funcionalidad mediante <emphasis>módulos</emphasis>, como la &quot;consola&quot; (consulte la <xref linkend="part-dashboard"/>), &quot;prometheus&quot; (consulte el <xref linkend="monitoring-alerting"/>), o el &quot;equilibrador&quot;.
  </para>
  <para>
   Para mostrar todos los módulos disponibles, ejecute:
