--- a/l10n/ses/es-es/xml/ses_glossary.xml
+++ b/l10n/ses/es-es/xml/ses_glossary.xml
@@ -76,7 +76,7 @@
   <glossentry><glossterm>Clúster de almacenamiento de Ceph</glossterm>
    <glossdef>
     <para>
-     El conjunto principal de software de almacenamiento donde se almacenan los datos del usuario&apos; Dicho conjunto está formado por los monitores Ceph Monitor y los OSD.
+     El conjunto principal de software de almacenamiento donde se almacenan los datos del usuario. Dicho conjunto está formado por los monitores Ceph Monitor y los OSD.
     </para>
    </glossdef>
   </glossentry>
