--- a/l10n/ses/es-es/xml/upgrade-to-pacific.xml
+++ b/l10n/ses/es-es/xml/upgrade-to-pacific.xml
@@ -71,7 +71,7 @@
     </listitem>
     <listitem>
      <para>
-      Lea el <xref linkend="ses-deployment"/> para familiarizarse con <systemitem class="resource">ceph-salt</systemitem> y Ceph Orchestrator y, en particular, con la información sobre las especificaciones de servicio.
+      Lea la <xref linkend="ses-deployment"/> para familiarizarse con <systemitem class="resource">ceph-salt</systemitem> y Ceph Orchestrator y, en particular, con la información sobre las especificaciones de servicio.
      </para>
     </listitem>
    </itemizedlist>
@@ -80,7 +80,7 @@
   <sect2 xml:id="upgrade-backup-config-data-7p">
    <title>Copia de seguridad de la configuración y los datos del clúster</title>
    <para>
-    Se recomienda encarecidamente realizar una copia de seguridad de toda la configuración y los datos del clúster antes de iniciar la actualización. Para obtener instrucciones sobre cómo realizar copias de seguridad de todos los datos, consulte <xref linkend="cha-deployment-backup"/>.
+    Se recomienda encarecidamente realizar una copia de seguridad de toda la configuración y los datos del clúster antes de iniciar la actualización. Para obtener instrucciones sobre cómo realizar copias de seguridad de todos los datos, consulte el <xref linkend="cha-deployment-backup"/>.
    </para>
   </sect2>
 
@@ -177,7 +177,7 @@
   <title>Actualización de los paquetes relacionados con SUSE Enterprise Storage en cada nodo del clúster</title>
 
   <para>
-   Para actualizar los paquetes de SUSE Enterprise Storage a la versión más reciente, utilice el comando <command>ceph-salt update</command>. Para obtener más información, consulte <xref linkend="cephadm-rolling-updates"/>.
+   Para actualizar los paquetes de SUSE Enterprise Storage a la versión más reciente, utilice el comando <command>ceph-salt update</command>. Para obtener más información, consulte el <xref linkend="cephadm-rolling-updates"/>.
   </para>
  </sect1>
  <sect1 xml:id="upgrade-ses-services">
