--- a/l10n/ses/es-es/xml/common_intro_support.xml
+++ b/l10n/ses/es-es/xml/common_intro_support.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<sect1 xmlns="http://docbook.org/ns/docbook" xmlns:xi="http://www.w3.org/2001/XInclude" xmlns:xlink="http://www.w3.org/1999/xlink" xml:base="common_intro_support.xml" xml:lang="es" version="5.1">
+<sect1 xmlns="http://docbook.org/ns/docbook" xmlns:xi="http://www.w3.org/2001/XInclude" xmlns:xlink="http://www.w3.org/1999/xlink" xml:base="common_intro_support.xml" xml:lang="en" version="5.1">
  <title>Asistencia</title>
 
  <info>
@@ -9,7 +9,7 @@
  </info>
 
  <para>
-  A continuación, encontrará la declaración de asistencia técnica de SUSE Enterprise Storage e información general sobre tecnología en fase preliminar. Para obtener más información sobre el ciclo de vida del producto, consulte el <link xlink:href="https://www.suse.com/lifecycle"/>.
+  A continuación, encontrará la declaración de asistencia técnica de SUSE Enterprise Storage e información general sobre tecnología en fase preliminar. Para obtener más información sobre el ciclo de vida del producto, consulte <link xlink:href="https://www.suse.com/lifecycle"/>.
  </para>
  <para>
   Si tiene derecho a recibir asistencia técnica, encontrará detalles sobre cómo recopilar información para un ticket de asistencia en <link xlink:href="https://documentation.suse.com/sles-15/html/SLES-all/cha-adm-support.html"/>.
